# CustomSimulator---Test

./: .gitignore  BENCHMARKS.md  OPTIMIZER_REPRODUCTION.md  README.md  index.html  main.js  math.js  optimizer.js  package-lock.json  package.json  requirements.js  wasm_optimizer.js  workspace-accel.js  workspace.js
.github/workflows/: build.yml
Additional_Repo_Stuff/: README.md
Additional_Repo_Stuff/docs/: Stewart_Optimizer_Comprehensive_Guide.md  Stewart_Optimizer_Final_Spec_v3.md  Stewart_Optimizer_Final_Spec_v4.md  Stewart_Optimizer_Quick_Start.md
Additional_Repo_Stuff/examples/: AYVA_Optimized_Layout.json  Circular_Layout.json  Hexagonal_Layout.json  Sample_Requirements.json
Additional_Repo_Stuff/schemas/: Stewart_Requirements_Schema_v2.json  Stewart_Requirements_Schema_v2.md
Raw Information/: AYVA_Optimized_Layout.json  Circular_Layout.json  Hexagonal_Layout.json  ReadThis.txt  Stewart_Layout_Schema.json  Stewart_Simulator_Consolidated.md  Stewart_Simulator_Spec.md  index_ayva_fixed.html  index_linear_example.html  linear_layout.json
Raw Information/Stuff from Old Project/: index.html  stewart.js  stewart.min.js
scripts/: build-windows.sh
stewart_sim/: Cargo.toml
stewart_sim/benches/: optimizer.rs  workspace.rs
stewart_sim/src/: lib.rs  main.rs  optimizer.rs  workspace.rs
stewart_sim/tests/: js_workspace_call.mjs  workspace_js_compare.rs
wasm/: jacobian.ts  jacobian.wat
