[package]
name = "stewart_sim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.32"
nalgebra = "0.34.0"
quaternion = "2.0.0"
rand = "0.9.2"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
three-d = { version = "0.18.2", features = ["egui-gui", "window"] }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "workspace"
harness = false

[[bench]]
name = "optimizer"
harness = false

[features]
default = []
wasm = ["getrandom", "wasm-bindgen", "console_error_panic_hook", "serde-wasm-bindgen"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
